api-gateway/api-gateway.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  headers:
                    - name: :method
                      exact_match: GET
                  prefix: "/scanner/v1/scan" # Expose Scanner's API for client call
                route:
                  prefix_rewrite: "/scan" # Rewrite the path to call scanner service `/scan`
                  cluster: scanner
              - match:
                  headers:
                    - name: :method
                      exact_match: GET
                  prefix: "/insight/v1/report" # Expose Insight's API for client call
                route:
                  prefix_rewrite: "/report" # Rewrite the path to call insight service `/report`
                  cluster: insight
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: scanner
    connect_timeout: 10s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: scanner
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: scanner
                port_value: 8090
  - name: insight
    connect_timeout: 10s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: insight
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: insight
                port_value: 9000

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
